# Vgrid

./: .gitattributes  .gitignore  README.md  pyproject.toml
.claude/skills/etf-write/: SKILL.md  reference.md
.claude/skills/vgrid-share/: SKILL.md
docs/: roadmap.md
docs/design/: console.html  前端技术选型.md
docs/review/: 2026-07-06-M1-core-strategy.md  2026-07-06-M2-data-backtest-report-cli.md  2026-07-06-M3-scan.md  2026-07-07-store-paper-web-data.md  _剩余问题.md
docs/模块设计/: backtest.md  batch.md  charts.md  cli.md  core.md  data.md  dca.md  income.md  notify.md  paper.md  report.md  scan.md  store.md  strategy.md  web.md
docs/需求/: 前端驱动需求清单.md  红利ETF分红收益对比需求.md
examples/: 159920.json  scan_159920.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Background.tsx  BacktestForm.tsx  BacktestResult.tsx  Clock.tsx  CompareChart.tsx  DcaForm.tsx  DcaResult.tsx  EnhanceChart.tsx  EquityChart.tsx  FitnessGauge.tsx  GridLadder.tsx  IncomeChart.tsx  InstanceCard.tsx  InstancePills.tsx  InstrumentHeader.tsx  KpiGrid.tsx  LadderPanel.tsx  ModeSwitch.tsx  Panel.tsx  Placeholder.tsx  PortfolioSummaryBar.tsx  Rail.tsx  RiskPanel.tsx  ScanPanel.tsx  SectionTitle.tsx  SimBanner.tsx  Sparkline.tsx  StrategyEditor.tsx  StrategyForm.tsx  Ticker.tsx  Topbar.tsx  Uplot.tsx  icons.tsx
src/vgrid/: __init__.py
tests/: conftest.py  test_akshare_provider.py  test_api_backtest.py  test_api_compare.py  test_api_dca.py  test_api_etf.py  test_api_income.py  test_api_ladder.py  test_api_portfolio.py  test_api_quotes.py  test_api_strategies.py  test_backtest_api.py  test_bar.py  test_batch.py  test_cache.py  test_charts_smoke.py  test_cli.py  test_compare.py  test_config.py  test_dca_amount.py  test_dca_config.py  test_dca_engine.py  test_dca_schedule.py  test_dca_xirr.py  test_engine.py  test_etf_info.py  test_fees.py  test_grid_fitness.py  test_gridlines.py  test_income_combo.py  test_income_dividends.py  test_income_metrics.py  test_income_nav.py  test_income_report.py  test_income_series.py  test_income_service.py  test_income_universe.py  test_ladder.py  test_ladder_view.py  test_loader.py  (+22 more)
(+143 files in other folders)
